tests/invalid/multi_namespace/client.php
<?php

namespace Multi\Client;

use Multi\Service as Svc;

Svc\takesTwo(1);

